// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BadgeInfoIcon when asked to render renders 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="24"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M3.85 8.62a4 4 0 0 1 4.78-4.77 4 4 0 0 1 6.74 0 4 4 0 0 1 4.78 4.78 4 4 0 0 1 0 6.74 4 4 0 0 1-4.77 4.78 4 4 0 0 1-6.75 0 4 4 0 0 1-4.78-4.77 4 4 0 0 1 0-6.76Z"
  />
  <line
    x1="12"
    x2="12"
    y1="16"
    y2="12"
  />
  <line
    x1="12"
    x2="12.01"
    y1="8"
    y2="8"
  />
</svg>
`;

exports[`BadgeInfoIcon when asked to render with additional class renders with additional class 1`] = `
<svg
  aria-hidden="true"
  className="some-class"
  fill="none"
  height="24"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M3.85 8.62a4 4 0 0 1 4.78-4.77 4 4 0 0 1 6.74 0 4 4 0 0 1 4.78 4.78 4 4 0 0 1 0 6.74 4 4 0 0 1-4.77 4.78 4 4 0 0 1-6.75 0 4 4 0 0 1-4.78-4.77 4 4 0 0 1 0-6.76Z"
  />
  <line
    x1="12"
    x2="12"
    y1="16"
    y2="12"
  />
  <line
    x1="12"
    x2="12.01"
    y1="8"
    y2="8"
  />
</svg>
`;
